k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cerebro
  labels:
    app.kubernetes.io/name: cerebro
    app.kubernetes.io/part-of: cerebro
